--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,8 +15,8 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "News", newsitems_path %></li>
                 <li><%= link_to "Features", pages_features_path %></li>
-                <li><%= link_to "Resources", resources_path %></li>
-                <li><%= link_to "Contact", pages_contact_path %></li>
+                <li><%= link_to "Resources", resources_path, method: :get %></li>
+                <li><%= link_to "Contact", contact_path %></li>
                 <li><a href="http://wiki.mastercoin.org/index.php/Main_Page">Wiki</a></li>
                 <li><a href="https://trello.com/b/uRutPlms/exchange-project">Trello</a></li>
               </ul>
