--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -10,18 +10,8 @@
   <div class="container"><p id="notice"><%= notice %></p>
 
 		<p>
-		  <strong>Name:</strong>
-		  <%= @comment.name %>
-		</p>
-
-		<p>
-		  <strong>Email:</strong>
-		  <%= @comment.email %>
-		</p>
-
-		<p>
 		  <strong>Message:</strong>
-		  <%= @comment.message %>
+		  <%= @comment.content %>
 		</p>
 
 		<p>
