--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -30,7 +30,7 @@
           </div>
 
         <% end %>
-        <div id="pagination"><%= will_paginate @notifications %></div>  
+        <div id="pagination"><%= paginate @notifications %></div>  
 
       </div>
       <%= render 'layouts/news_banner' %>
