--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,9 @@
 <div id="wrapper">
   <div class="container">
   <hr>
+
+    <div class="clearfix"></div>
+
     <!-- start: Row -->
     <div class="row">
       <div class="span9">
