--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [@commentable, @comment] do |f| %>
+<%= simple_form_for [@commentable, Comment.new] do |f| %>
   <%= f.error_notification %>
 
 	<%= f.input :content %>
