--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -115,6 +115,7 @@
 			<p>
 					© 2013, Created by Peter van den Berg
 			</p>
+			<p><%= link_to 'AdminLogin', admin_user_session_path %></p>
 		</div>
 	</div>	
 </div>	
