--- a/app/assets/stylesheets/ext_lib/style.css.sass
+++ b/app/assets/stylesheets/ext_lib/style.css.sass
@@ -1681,8 +1681,7 @@ a.buy
 .post .post-meta
   background: #fcfcfc
   color: #666
-  margin: 10px -20px 0px -20px
-  padding: 10px 25px
+  padding: 5px
   border-top: 1px solid #f6f6f6
   a
     text-decoration: none
