--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -32,19 +32,25 @@
                 <p><%= raw markdown.render(blog.body) %></p>
               </div>
               <div class="post-entry">
-                <%= link_to 'Read More...', blog_path(blog) %>
+                <%= link_to 'Read More...', blog_path(blog), method: :get  %>
               </div>
               <div class="post-meta">
                 <span><i class="mini-ico-calendar"></i><%= blog.created_at.to_s(:short) %></span>
-                <span><i class="mini-ico-user"></i>By <a href="#"><%= blog.user.name %></a></span>
+                <span><i class="mini-ico-user"></i>By <a href="#"><%= link_to blog.user.name, user_path(blog.user) %></a></span>
                 <span><i class="mini-ico-comment"></i>Comment(s)<%= link_to blog.comments.count, blog_path(blog) %></span>
                 <span><div class="fb-share-button" data-href="http://developers.facebook.com/docs/plugins/" data-type="button"></div></span>
+                <% if current_user && current_user.kind == "Admin" %>
+                  <span><i class="mini-ico-user"></i><%= link_to 'Edit', edit_blog_path(blog) %></span>
+                <% end %>
               </div>
             </div>
 
           </div>
         <% end %>
-        <%= button_to 'Create new Blog', new_blog_path, id: "comment_button", method: :get  %>
+
+        <% if current_user && current_user.kind == "Admin" %>
+          <%= button_to 'Create new Blog', new_blog_path, id: "comment_button", method: :get  %>
+        <% end %>
         <ul class="pagination">
           <%= paginate @blogs %>
         </ul>
