--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -23,8 +23,7 @@
 
         <div class="row submit">
           <div class="span3 right">
-            <%= f.button :submit, 'Send E-mail' %>
-          </div>
+            <%= f.button :submit, 'Send E-mail', id: "comment_button", method: :get%>
         </div>
       <% end %>
     </div>
