--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,10 @@
         <%= link_to image_tag('mastercoin_logo.png'), '/', class: "brand", method: :get %>
     		<div class="nav-collapse collapse">
       		<ul class="nav">
-            <li><%= link_to "News", newsitems_path %></li>
+            <% if current_user && current_user.kind == "Admin" %>
+              <li><%= link_to "Admin Dashboard", "/admin" %></li>
+            <% end %>
+            <li><%= link_to "News", newsitems_path, method: :get %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Information<b class="caret"></b></a>
               <ul class="dropdown-menu">
@@ -22,7 +25,7 @@
               </ul>
             </li>
             <li><%= link_to "The team", pages_teampage_path %></li>
-            <li><%= link_to "Blog", blogs_path %></li>
+            <li><%= link_to "Blog", blogs_path, method: :get  %></li>
             <li><%= link_to "BudgetPage", '#' %></li>
             <% if user_signed_in? %>
               <li class="dropdown">
@@ -34,9 +37,11 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "All users", users_path %></li>
-                  <li><%= link_to "My profile", user_path(current_user) %></li>
+                  <li><%= link_to "My profile", user_path(current_user) %></li>  
                   <li><%= link_to "Send notification", new_message_path %></li>
-                  <li><%= link_to "Edit Profile Settings", edit_user_registration_path %></li>
+                  <% if ["Admin", "Staff", "User"].include? current_user.kind %>
+                    <li><%= link_to "Edit Profile Settings", edit_user_registration_path %></li>
+                  <% end %>  
                   <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
                 </ul>
               </li>
