--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -49,7 +49,9 @@
             </div>
           <% end %>
         </div>
-      <%= button_to 'Create new resource', new_resource_path, id: "comment_button", method: :get  %>
+      <% if current_user && current_user.kind == "Admin" %>
+        <%= button_to 'Create new resource', new_resource_path, id: "comment_button", method: :get  %>
+      <% end %>
       </div>
 
     <% else %>
