--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -122,7 +122,10 @@
 
       <% else %>
         <p>Theres no blogs created just yet. </p>
-        <%= button_to 'Create new Blog', new_blog_path, id: "comment_button", method: :get  %>
+
+        <% if current_user && current_user.kind == "Admin" %>
+          <%= button_to 'Create new Blog', new_blog_path, id: "comment_button", method: :get  %>
+        <% end %>
       <% end %>
 
     </div>
