--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -29,61 +29,23 @@
 
         <hr>
         <!-- start: Comments -->
-        <div class="title-out">
-          <h3>Comments <span class="comments-amount"><%= @message.comments.count %></span></h3>
-        </div>
-        
-        <hr>
-        
-        <div class="comments-sec">
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+            var disqus_shortname = 'mastercointeampage'; // required: replace example with your forum shortname
 
-          <ol class="commentlist">
-            <% if !@comments.empty? %>
-              <% @comments.each do |comment| %>
-              <li>
-                <div class="comments">
-                  <% if comment.user.image.present? %>
-                  <div class="avatar"><%= image_tag comment.user.image.url(:thumb) %></div>
-                  <% else %>
-                  <div class="avatar"><img src="http://www.gravatar.com/avatar/00000000000000000000000000000000?d=mm&amp;s=50" alt="" width="50" height="50" border="0"></div>
-                  <% end %>
-                  <div class="comment-des">
-                  <div class="comment-by"><strong><%= comment.user.name %></strong><span class="reply"><span style="color:#aaa">/ </span><a href="#">Reply</a></span> <span class="date"><%= comment.created_at %></span></div>
-                    <p><%= raw markdown.render(comment.content) %></p>
-                  </div>
-                </div>
-
-                <ol class="childlist">
-                  <li>
-                    <div class="comments">
-                    <div class="avatar"><img src="http://www.gravatar.com/avatar/00000000000000000000000000000000?d=mm&amp;s=50" alt="" border="0"> </div>
-                    <div class="comment-des">
-                    <div class="comment-by"><strong>Lucas Luck</strong><span class="reply"><span style="color:#aaa"></span></span><span class="date">June 1, 2012</span></div>
-                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-                      </div>
-                    </div>
-                  </li>
-                </ol>   
-              </li>
-              <% end %>
-            <% else %>
-              This message has no comments yet. Be the first to leave a comment.
-            <% end %>
-          </ol>
-
-        </div>
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function() {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
         <!-- end: Comments -->
         
         <div class="clear"></div>
-        
-        <hr>
-
-        <div class="title-out">
-          <h3>Leave a Comment</h3>
-        </div>
-        <hr>
-        <%= render 'comments/form' %>
-        <hr>
 
         <div class="post">
           <div class="title">
