--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,11 @@
+<div id="page-title">
+  <div id="page-title-inner">
+    <div class="container">
+      <h2><i class="ico-keynote"></i>Welcome</h2>
+    </div>
+  </div>  
+</div>
+
 <div id="wrapper">
   <div class="container">
   <hr>
