--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@message) do |f| %>
+  <%= simple_form_for(@message) do |f| %>
   <% if @message.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@message.errors.count, "error") %> prohibited this message from being saved:</h2>
@@ -12,6 +12,8 @@
   <% end %>
   
   <%= f.association :users %>
+
+  <%= f.input :group_ids, collection: @groups, as: :check_boxes %>
 
   <div class="field">
     <%= f.label :title %><br>
