--- a/app/views/newsitems/_form.html.erb
+++ b/app/views/newsitems/_form.html.erb
@@ -17,9 +17,10 @@
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, :class => "tinymce", :rows => 40, :cols => 120 %>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+<%= tinymce %>
